Update DBMS layout to include client-side lazy loading

--- a/src/layouts/DBMS.astro
+++ b/src/layouts/DBMS.astro
@@ -9,5 +9,5 @@ const { pageName } = Astro.props;
 
 <main class="flex min-h-svh">
   <Aside pageName={pageName} />
-  <Section />
+  <Section pageName={pageName} client:load />
 </main>
